--- a/1-survey-form/index.html
+++ b/1-survey-form/index.html
@@ -9,27 +9,27 @@
 
 <body>
 	<h1 id="title">freeCodeCamp Survey Form</h1>
-	<p id="description">Thank you for helping us improve the platform<! /p>
-			<form id="survey-form">
-				<fieldset>
-					<section>
-						<label for="name" id="name-label">Name</label>
-						<input type="text" required id="name" name="name" placeholder="bryan johnson">
-					</section>
-					<section>
-						<label for="email" id="email-label">Email</label>
-						<input type="email" required id="email" name="email" placeholder="bj@hotmail.com">
-					</section>
-					<section>
-						<label for="age" id="number-label">Age (optional)</label>
-						<input type="number" name="age" id="number" placeholder="69" min="18" max="420">
-					</section>
-					<section>
-						<input type="submit" value="Submit" id="submit">
-					</section>
+	<p id="description">Thank you for helping us improve the platform!</p>
+	<form id="survey-form">
+		<fieldset>
+			<section>
+				<label for="name" id="name-label">Name</label>
+				<input type="text" required id="name" name="name" placeholder="bryan johnson">
+			</section>
+			<section>
+				<label for="email" id="email-label">Email</label>
+				<input type="email" required id="email" name="email" placeholder="bj@hotmail.com">
+			</section>
+			<section>
+				<label for="age" id="number-label">Age (optional)</label>
+				<input type="number" name="age" id="number" placeholder="69" min="18" max="420">
+			</section>
+			<section>
+				<input type="submit" value="Submit" id="submit">
+			</section>
 
-				</fieldset>
-			</form>
+		</fieldset>
+	</form>
 </body>
 
 </html>
