start checkbox section

--- a/1-survey-form/index.html
+++ b/1-survey-form/index.html
@@ -50,7 +50,17 @@
 		</fieldset>
 		<fieldset>
 			<!-- checkboxes, each must have a `name` attribute -->
+			<input type="checkbox" name="front-end-projects" id="front-end-projects" class="inline">
+			<label for="front-end-projects">Front-End Projects</label>
 
+			<input type="checkbox" name="blockchain-projects" id="blockchain-projects">
+			<label for="blockchain-projects">Blockchain Projects</label>
+
+			<input type="checkbox" name="back-end-projects" id="backend-projects">
+			<label for="backend-projects">Back-End Projects</label>
+
+			<input type="checkbox" name="data-science-projects" id="data-science-projects">
+			<label for="data-science-projects">Data Science Projects</label>
 		</fieldset>
 		<section>
 			<input type="submit" value="Submit" id="submit">
