--- a/1-survey-form/index.html
+++ b/1-survey-form/index.html
@@ -9,11 +9,22 @@
 
 <body>
 	<header>
+		<!-- h1 element with an id of title -->
 		<h1 id="title">freeCodeCamp Survey Form</h1>
+		<!-- p element with an id of description -->
 		<p id="description">Thank you for helping us improve the platform!</p>
 	</header>
+	<!-- form element with an id of survey-form -->
 	<form id="survey-form">
 		<fieldset id="user-info-set">
+			<!-- required to enter your name in an input field that has an id of name and a type of text -->
+			<!-- required to enter your email in an input field that has an id of email -->
+			<!-- enable HTML5 validation for the email field (ie use type=email) -->
+			<!-- form has a number in an input field that has an id of `number` -->
+			<!-- number field should not allow non-numbers (HTML5 validation) -->
+			<!-- name, email, and number input fields should have corresponding `label` elements with `id`s -->
+			<!-- placeholder text in name, email, and number input fields -->
+			appropriate `id`s for each respective label, for the name, email, number input fields
 			<section>
 				<label for="name" id="name-label">Name</label>
 				<input type="text" required id="name" name="name" placeholder="bryan johnson">
@@ -27,8 +38,9 @@
 				<input type="number" name="age" id="number" placeholder="69" min="18" max="420">
 			</section>
 			<section>
-				<label for="occupation" id="occupation-label">Occupation</label>
-				<select id="occupation" name="occuption">
+				<!-- `select` dropdown element with an id of `dropdown` and at least two options -->
+				<label for="dropdown" id="occupation-label">Occupation</label>
+				<select id="dropdown" name="occuption">
 					<option value="">select current role</option>
 					<option value="1">student</option>
 					<option value="2">working</option>
@@ -37,6 +49,7 @@
 			</section>
 		</fieldset>
 		<fieldset id="recommend-set">
+			<!-- group of at least two radio buttons that are grouped using the `name` attribute -->
 			<legend>Would you recommend freeCodeCamp to a friend?</legend>
 			<label for="recommend-definitely" class="flex">
 				<input type="radio" id="recommend-definitely" name="recommended" class="inline" checked> definitely
@@ -48,7 +61,7 @@
 				<input type="radio" id="recommend-no" name="recommended" class="inline"> no
 			</label>
 		</fieldset>
-		<fieldset>
+		<fieldset id="favorite-set">
 			<!-- checkboxes, each must have a `name` attribute -->
 			<input type="checkbox" name="front-end-projects" id="front-end-projects" class="inline">
 			<label for="front-end-projects">Front-End Projects</label>
