--- a/1-survey-form/index.html
+++ b/1-survey-form/index.html
@@ -24,7 +24,7 @@
 			<!-- number field should not allow non-numbers (HTML5 validation) -->
 			<!-- name, email, and number input fields should have corresponding `label` elements with `id`s -->
 			<!-- placeholder text in name, email, and number input fields -->
-			appropriate `id`s for each respective label, for the name, email, number input fields
+			<!-- appropriate `id`s for each respective label, for the name, email, number input fields -->
 			<section>
 				<label for="name" id="name-label">Name</label>
 				<input type="text" required id="name" name="name" placeholder="bryan johnson">
@@ -62,18 +62,26 @@
 			</label>
 		</fieldset>
 		<fieldset id="favorite-set">
-			<!-- checkboxes, each must have a `name` attribute -->
-			<input type="checkbox" name="front-end-projects" id="front-end-projects" class="inline">
-			<label for="front-end-projects">Front-End Projects</label>
+			<!-- a series of checkboxes, each of which must have a value attribute -->
+			<div class="flex">
+				<input type="checkbox" id="front-end-projects" class="inline" value="front-end-projects">
+				<label for="front-end-projects">Front-End Projects</label>
+			</div>
 
-			<input type="checkbox" name="blockchain-projects" id="blockchain-projects">
-			<label for="blockchain-projects">Blockchain Projects</label>
+			<div class="flex">
+				<input type="checkbox" id="blockchain-projects" class="inline" value="blockchain-projects">
+				<label for="blockchain-projects">Blockchain Projects</label>
+			</div>
 
-			<input type="checkbox" name="back-end-projects" id="backend-projects">
-			<label for="backend-projects">Back-End Projects</label>
+			<div class="flex">
+				<input type="checkbox" id="backend-projects" class="inline" value="back-end-projects">
+				<label for="backend-projects">Back-End Projects</label>
+			</div>
 
-			<input type="checkbox" name="data-science-projects" id="data-science-projects">
-			<label for="data-science-projects">Data Science Projects</label>
+			<div class="flex">
+				<input type="checkbox" id="data-science-projects" class="inline" value="data-science-projects">
+				<label for="data-science-projects">Data Science Projects</label>
+			</div>
 		</fieldset>
 		<section>
 			<input type="submit" value="Submit" id="submit">
