--- a/1-survey-form/index.html
+++ b/1-survey-form/index.html
@@ -83,6 +83,12 @@
 				<label for="data-science-projects">Data Science Projects</label>
 			</div>
 		</fieldset>
+
+		<fieldset>
+			<label for="text-feedback">Any other comments?</label>
+			<textarea name="additional-feedback" id="text-feedback" cols="30" rows="10">additional feedback...</textarea>
+		</fieldset>
+
 		<section>
 			<input type="submit" value="Submit" id="submit">
 		</section>
