add values to radio buttons

--- a/1-survey-form/index.html
+++ b/1-survey-form/index.html
@@ -52,13 +52,14 @@
 			<!-- group of at least two radio buttons that are grouped using the `name` attribute -->
 			<legend>Would you recommend freeCodeCamp to a friend?</legend>
 			<label for="recommend-definitely" class="flex">
-				<input type="radio" id="recommend-definitely" name="recommended" class="inline" checked> definitely
+				<input type="radio" id="recommend-definitely" name="recommended" value="definitely-recommend" class="inline"
+					checked> definitely
 			</label>
 			<label for="recommend-maybe" class="flex">
-				<input type="radio" id="recommend-maybe" name="recommended" class="inline"> maybe
+				<input type="radio" id="recommend-maybe" name="recommended" value="maybe-recommend" class="inline"> maybe
 			</label>
 			<label for="recommend-no" class="flex">
-				<input type="radio" id="recommend-no" name="recommended" class="inline"> no
+				<input type="radio" id="recommend-no" name="recommended" value="no-recommend" class="inline"> no
 			</label>
 		</fieldset>
 		<fieldset id="favorite-set">
