--- a/1-survey-form/index.html
+++ b/1-survey-form/index.html
@@ -64,6 +64,7 @@
 		</fieldset>
 		<fieldset id="favorite-set">
 			<!-- a series of checkboxes, each of which must have a value attribute -->
+			<legend>What do you think freeCodeCamp should publish more of?</legend>
 			<div class="flex">
 				<input type="checkbox" id="front-end-projects" class="inline" value="front-end-projects">
 				<label for="front-end-projects">Front-End Projects</label>
