--- a/2-tribute-page/index.html
+++ b/2-tribute-page/index.html
@@ -7,11 +7,21 @@
 </head>
 
 <body>
+	<!-- main element, with a corresponding id of `main`, which contains all other elements -->
 	<main id="main">
+		<!-- element with an id of title, which contains a string that describes the subject of the tribute page -->
 		<h1 id="title">Dr. Carl Sagan</h1>
+		<!-- figure or a div element with an id of `img-div` -->
 		<figure id="img-div">
+			<!-- #img-div element, an img element with a corresponding id="image" -->
+			<!-- #image should use max-width and height properties to resize relative to the width of its parent element, without exceeding its original size -->
+			<!-- img element should be centered within its parent element -->
 			<img src="./carl_sagan.png" alt="Carl Sagan portrait at the Planetary Society in the 1970's" id="image">
+			<!-- #img-div element, an element with a corresponding id="img-caption" text description of the image shown in #img-div -->
 		</figure>
+		<!-- element with id="tribute-info", which contains textual content describing the subject of the tribute page -->
+		<!-- an <a> with a id="tribute-link", links to an outside site, that contains additional info about the subject of the page -->
+		<!-- attribute of target and set it to _blank in order for your link to open in a new tab -->
 	</main>
 </body>
 
