--- a/2-tribute-page/index.html
+++ b/2-tribute-page/index.html
@@ -11,17 +11,62 @@
 	<main id="main">
 		<!-- element with an id of title, which contains a string that describes the subject of the tribute page -->
 		<h1 id="title">Dr. Carl Sagan</h1>
+		<p>The astronomer who brought the inspired wonder of the cosmos into your home</p>
 		<!-- figure or a div element with an id of `img-div` -->
 		<figure id="img-div">
 			<!-- #img-div element, an img element with a corresponding id="image" -->
 			<!-- #image should use max-width and height properties to resize relative to the width of its parent element, without exceeding its original size -->
 			<!-- img element should be centered within its parent element -->
 			<img src="./carl_sagan.png" alt="Carl Sagan portrait at the Planetary Society in the 1970's" id="image">
-			<!-- #img-div element, an element with a corresponding id="img-caption" text description of the image shown in #img-div -->
+			<!-- an element with a corresponding id="img-caption" text description of the image shown in #img-div -->
+			<figcaption id="img-caption">A portrait of Carl Sagan at the Planetary Society in the 1970's</figcaption>
 		</figure>
 		<!-- element with id="tribute-info", which contains textual content describing the subject of the tribute page -->
+		<div id="tribute-info">
+			A brief timeline of Carl Sagan's life and accomplishments
+		</div>
+		<div class="timeline">
+			1934
+			Born in Brooklyn, New York
+			1951
+			Graduated valedictorian of Rahway Highschool at 16. Started attending University of Chicago.
+			1954
+			Awarded Bachelor of Arts
+			1955
+			Awarded Bachelor of Science in Physics
+			1956
+			Earned Masters of Science in Physics
+			1958
+			Worked on Project A119 - a secret United States Air Force plan to detonate a nuclear warhead on the moon. In 1999
+			it was found that Sagan had applied to UC Berkley using two titles of classified papers from Project A119.
+			1960
+			Earned Doctor of Philosophy in astronomy and astrophysics. Started a 2 year Miller Fellowship at UC Berkley.
+			1963
+			Worked as an assistant professor at Harvard and worked at Smithsonian Astrophysical Observatory.
+			1968
+			Denied tenureship at Harvard unexpectedly, in part due to recommendations by former colleagues who didn't like his
+			publicized science advocacy work (perceived as self promotion on the backs of other's work). He then moved to work
+			at the Cornell astronomy department for the rest of his life.
+			1972
+			Assembled the first physical message sent into space: a plaque attached to space probe Pioneer 10
+			1977
+			Wrote "The Dragons of Eden: Speculations on the Evolution of Human Intelligence"
+			1980
+			Wrote and narrated "Cosmos: A Personal Voyage", a 13 part science themed variety show to inspire a general
+			audience of viewers, whom Sagan felt had lost interest in science, partly due to a stifled educational system.
+			1985
+			Wrote "Contact", a hard science fiction novel about the first contact between humans and extra-terrestrials.
+			1996
+			Passed away at 62 years of age, from pneumonia after enduring myelodysplastia for 2 years.
+
+		</div>
 		<!-- an <a> with a id="tribute-link", links to an outside site, that contains additional info about the subject of the page -->
-		<!-- attribute of target and set it to _blank in order for your link to open in a new tab -->
+		<!-- set it to _blank in order for your link to open in a new tab -->
+		<div id="footer">
+			Learn more about Carl Sagan and his work on <a href="https://en.wikipedia.org/wiki/Carl_Sagan"
+				target="_blank">Wikipedia</a>
+		</div>
+
 	</main>
 </body>
 
