--- a/2-tribute-page/index.html
+++ b/2-tribute-page/index.html
@@ -17,9 +17,11 @@
 			<!-- #img-div element, an img element with a corresponding id="image" -->
 			<!-- #image should use max-width and height properties to resize relative to the width of its parent element, without exceeding its original size -->
 			<!-- img element should be centered within its parent element -->
-			<img src="./carl_sagan.png" alt="Carl Sagan portrait at the Planetary Society in the 1970's" id="image">
+			<img src="./sagan_viking.jpg"
+				alt="Carl Sagan standing in front of Viking Lander mockup in Death Valley, California" id="image">
 			<!-- an element with a corresponding id="img-caption" text description of the image shown in #img-div -->
-			<figcaption id="img-caption">A portrait of Carl Sagan at the Planetary Society in the 1970's</figcaption>
+			<figcaption id="img-caption">Carl Sagan standing in front of Viking Lander mockup in Death Valley, California
+			</figcaption>
 		</figure>
 		<!-- element with id="tribute-info", which contains textual content describing the subject of the tribute page -->
 		<div id="tribute-info">
