--- a/2-tribute-page/index.html
+++ b/2-tribute-page/index.html
@@ -157,8 +157,8 @@
 		</section>
 		<!-- an <a> with a id="tribute-link", links to an outside site, that contains additional info about the subject of the page -->
 		<!-- set it to _blank in order for your link to open in a new tab -->
-		<div class="footer">
-			Learn more about Carl Sagan and his work on <a href="https://en.wikipedia.org/wiki/Carl_Sagan"
+		<div class="footer" id="tribute-info">
+			Learn more about Carl Sagan and his work on <a id="tribute-link" href="https://en.wikipedia.org/wiki/Carl_Sagan"
 				target="_blank">Wikipedia</a>
 		</div>
 
