--- a/3-technical-documentation-page/index.html
+++ b/3-technical-documentation-page/index.html
@@ -3,21 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Technical Docs - stuff</title>
+	<title>Converting React Apps to Typescript</title>
 </head>
 
 <body>
-	<!-- You should have a main element with an id of main-doc. -->
-	<!-- You should have at least five section elements with a class of main-section. -->
-	<!-- All of your .main-section elements should be section elements. -->
-	<!-- You should have at least five .main-section elements that are descendants of #main-doc. -->
-	<!-- The first child of each .main-section should be a header element. -->
-	<!-- None of your header elements should be empty. -->
-	<!-- All of your .main-section elements should have an id. -->
-	<!-- Each .main-section should have an id that matches the text of its first child, having any spaces in the child's text replaced with underscores (_) for the id's. -->
-	<!-- You should have at least 10 p elements (total) within your .main-section elements. -->
-	<!-- You should have at least five code elements that are descendants of .main-section elements. -->
-	<!-- You should have at least five li elements that are descendants of .main-section elements. -->
 	<!-- You should have a nav element with an id of navbar. -->
 	<!-- Your #navbar should have exactly one header element within it. -->
 	<!-- You should have at least one a element with a class of nav-link. -->
@@ -28,6 +17,88 @@
 	<!-- Each .nav-link should have text that corresponds to the header text of its related section (e.g. if you have a "Hello world" section/header, your #navbar should have a .nav-link which has the text "Hello world"). -->
 	<!-- Each .nav-link should have an href attribute that links to its corresponding .main-section (e.g. If you click on a .nav-link element that contains the text "Hello world", the page navigates to a section element with that id). -->
 	<!-- Your #navbar should always be on the left edge of the window. -->
+	<nav id="navbar">
+		<header>
+		</header>
+		<a class=".nav-link" href="">
+		</a>
+		<a class=".nav-link" href="">
+		</a>
+		<a class=".nav-link" href="">
+		</a>
+		<a class=".nav-link" href="">
+		</a>
+		<a class=".nav-link" href="">
+		</a>
+	</nav>
+	<!-- You should have a main element with an id of main-doc. -->
+	<main id="main-doc">
+		<!-- You should have at least five section elements with a class of main-section. -->
+		<!-- All of your .main-section elements should be section elements. -->
+		<!-- You should have at least five .main-section elements that are descendants of #main-doc. -->
+		<!-- The first child of each .main-section should be a header element. -->
+		<!-- None of your header elements should be empty. -->
+		<!-- All of your .main-section elements should have an id. -->
+		<!-- Each .main-section should have an id that matches the text of its first child, having any spaces in the child's text replaced with underscores (_) for the id's. -->
+		<!-- You should have at least 10 p elements (total) within your .main-section elements. -->
+		<!-- You should have at least five code elements that are descendants of .main-section elements. -->
+		<!-- You should have at least five li elements that are descendants of .main-section elements. -->
+		<section class="main-section" id="">
+			<header>
+			</header>
+			<p>
+			</p>
+			<p>
+			</p>
+			<pre><code>
+			</code></pre>
+		</section>
+
+		<section class="main-section" id="">
+			<header>
+			</header>
+			<p>
+			</p>
+			<p>
+			</p>
+			<pre><code>
+			</code></pre>
+		</section>
+
+		<section class="main-section" id="">
+			<header>
+			</header>
+			<p>
+			</p>
+			<p>
+			</p>
+			<pre><code>
+			</code></pre>
+		</section>
+
+		<section class="main-section" id="">
+			<header>
+			</header>
+			<p>
+			</p>
+			<p>
+			</p>
+			<pre><code>
+			</code></pre>
+		</section>
+
+		<section class="main-section" id="">
+			<header>
+			</header>
+			<p>
+			</p>
+			<p>
+			</p>
+			<pre><code>
+			</code></pre>
+		</section>
+
+	</main>
 </body>
 
 </html>
