--- a/3-technical-documentation-page/index.html
+++ b/3-technical-documentation-page/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Static Analysis Tools for React Apps</title>
+	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
+	<link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
