--- a/3-technical-documentation-page/index.html
+++ b/3-technical-documentation-page/index.html
@@ -43,82 +43,92 @@
 		<!-- You should have at least five code elements that are descendants of .main-section elements. -->
 		<!-- You should have at least five li elements that are descendants of .main-section elements. -->
 		<section class="main-section" id="What_is_Static_Analysis">
-			<header> What is Static Analysis</header>
-			<p>
-				It is tooling that scrutinizes code without running it, as opposed to "dynamic analysis" which tests the result
-				of running code - like testing (unit tests or large end-to-end tests).
-			</p>
-			<p>
-				Static analysis also has a spectrum, but from ⚡ Speed <code><==></code> Power 💪
-			<ol>
-				<li>Formatters</li>
-				<li>Linters</li>
-				<li>Type Checkers</li>
-			</ol>
-			</p>
+			<header>What is Static Analysis</header>
+			<article>
+				<p>
+					It is tooling that scrutinizes code without running it, as opposed to "dynamic analysis" which tests the
+					result
+					of running code - like testing (unit tests or large end-to-end tests).
+				</p>
+				<p>
+					Static analysis also has a spectrum, but from ⚡ Speed <code><==></code> Power 💪
+				<ol>
+					<li>Formatters</li>
+					<li>Linters</li>
+					<li>Type Checkers</li>
+				</ol>
+				</p>
+			</article>
 		</section>
 
 		<section class="main-section" id="What_is_Formatting">
-			<header> What is Formatting</header>
-			<p>
-				A formatter is a tool that
-			<ol>
-				<li>reads your source code</li>
-				<li>ignores your formatting</li>
-				<li>rewrites it based on config rules</li>
-			</ol>
-			</p>
-			<p>
-				Ex. Prettier
-			</p>
+			<header>What is Formatting</header>
+			<article>
+				<p>
+					A formatter is a tool that
+				<ol>
+					<li>reads your source code</li>
+					<li>ignores your formatting</li>
+					<li>rewrites it based on config rules</li>
+				</ol>
+				</p>
+				<p>
+					Ex. Prettier
+				</p>
+			</article>
 		</section>
 
 		<section class="main-section" id="What_is_a_Linter">
 			<header>What is a Linter</header>
-			<p>
-				A linter is a tool that runs a set of checks on your source code
-			</p>
-			<ul>
-				<li>Each check is a rule</li>
-				<li>Each rule may report on code it doesn't like</li>
-				<li>Each complaint may contain an optional autofix</li>
-			</ul>
-			<p>
-				ESLint is a tool built into most text editors for identifying and reporting on patterns found in
-				ECMAScript/JavaScript code.
-			</p>
-			<ul>
-				<li>Every single rule of ESLint is a plugin</li>
-				<li>More rules can be added at runtime</li>
-				<li>The functionality of ESLint can be extended further by using community plugins, configs and parsers</li>
-			</ul>
+			<article>
+				<p>
+					A linter is a tool that runs a set of checks on your source code
+				</p>
+				<ul>
+					<li>Each check is a rule</li>
+					<li>Each rule may report on code it doesn't like</li>
+					<li>Each complaint may contain an optional autofix</li>
+				</ul>
+				<p>
+					ESLint is a tool built into most text editors for identifying and reporting on patterns found in
+					ECMAScript/JavaScript code.
+				</p>
+				<ul>
+					<li>Every single rule of ESLint is a plugin</li>
+					<li>More rules can be added at runtime</li>
+					<li>The functionality of ESLint can be extended further by using community plugins, configs and parsers</li>
+				</ul>
+			</article>
 		</section>
 
 		<section class="main-section" id="Running_ESLint">
 			<header>Running ESLint</header>
-			<p>
-				To install ESLint in a Node.js app, enter in your terminal:
-			</p>
-			<pre><code>
+			<article>
+				<p>
+					To install ESLint in a Node.js app, enter in your terminal:
+				</p>
+				<pre><code>
 npm install eslint --save-dev
 npm init @eslint/config # eslint config wizard
 
 npx eslint . # lint everything, in this directory
-			</code></pre>
-			<p>
-				<b>Note:</b> <code>npm init @eslint/config</code> assumes you have a <code>package.json</code> file already.
-				If you don’t, make sure to run <code>npm init</code> or <code>yarn init</code> beforehand.
-			</p>
+				</code></pre>
+				<p>
+					<b>Note:</b> <code>npm init @eslint/config</code> assumes you have a <code>package.json</code> file already.
+					If you don’t, make sure to run <code>npm init</code> or <code>yarn init</code> beforehand.
+				</p>
+			</article>
 		</section>
 
 		<section class="main-section" id="Configuring_ESLint">
 			<header>Configuring ESLint</header>
-			<p>
-				ESLint rules can be configured in <code>.eslintrc.js</code>.
-			</p>
-			<p>
-			</p>
-			<pre><code>
+			<article>
+				<p>
+					ESLint rules can be configured in <code>.eslintrc.js</code>.
+				</p>
+				<p>
+				</p>
+				<pre><code>
 // .eslintrc.js
 module.exports = {
 	// what eslint team thinks most codebases probably want
@@ -141,44 +151,47 @@ module.exports = {
 	}
 	
 }
-			</code></pre>
+				</code></pre>
+			</article>
 		</section>
 
 		<section class="main-section" id="Bonus_Round">
-			<header>Bonus Round
-			</header>
-			<p>
-				When disabling eslint for a single line like
-			</p>
-			<pre><code>
+			<header>Bonus Round</header>
+			<article>
+				<p>
+					When disabling eslint for a single line like
+				</p>
+				<pre><code>
 // eslint-disable-next-line no-console
 console.log("🥺")
-			</code></pre>
-			<p>
-				but then the <code>console.log</code> is later removed but <code>// eslint-disable</code> is not,
-				this will raise an exception so that you can find and remove it.
-			</p>
-			<pre><code>
+				</code></pre>
+				<p>
+					but then the <code>console.log</code> is later removed but <code>// eslint-disable</code> is not,
+					this will raise an exception so that you can find and remove it.
+				</p>
+				<pre><code>
 // package.json
 {
 	"scripts": {
 		"lint": "eslint . --report-unused-disable-directives"
 	}
 }
-			</code></pre>
+				</code></pre>
+			</article>
 		</section>
 
 		<section class="main-section" id="Bonus-er_Round">
-			<header>Bonus-er Round
-			</header>
-			<p>
-				<code>lint:fix</code> will fix whatever stuff has an autofix available
-			</p>
-			<p>
-				<code>--max-warnings 0</code> silences warnings from eslint, which is good to train us to not become complacent
-				about eslint messages.
-			</p>
-			<pre><code>
+			<header>Bonus-er Round</header>
+			<article>
+				<p>
+					<code>lint:fix</code> will fix whatever stuff has an autofix available
+				</p>
+				<p>
+					<code>--max-warnings 0</code> silences warnings from eslint, which is good to train us to not become
+					complacent
+					about eslint messages.
+				</p>
+				<pre><code>
 // package.json
 {
 	"scripts": {
@@ -186,7 +199,8 @@ console.log("🥺")
 		"lint:fix": "npm run lint -- --fix" 
 	}
 }
-			</code></pre>
+				</code></pre>
+			</article>
 		</section>
 
 	</main>
