make navbar responsive to screen size

--- a/3-technical-documentation-page/index.html
+++ b/3-technical-documentation-page/index.html
@@ -6,6 +6,7 @@
 	<title>Static Analysis Tools for React Apps</title>
 	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
 	<link rel="stylesheet" href="./styles.css">
+	<link rel="icon" href="https://fav.farm/🔥" />
 </head>
 
 <body>
@@ -19,18 +20,20 @@
 	<!-- Each .nav-link should have text that corresponds to the header text of its related section (e.g. if you have a "Hello world" section/header, your #navbar should have a .nav-link which has the text "Hello world"). -->
 	<!-- Each .nav-link should have an href attribute that links to its corresponding .main-section (e.g. If you click on a .nav-link element that contains the text "Hello world", the page navigates to a section element with that id). -->
 	<!-- Your #navbar should always be on the left edge of the window. -->
-	<nav id="navbar">
-		<header>Static Analysis Tools for React Apps</header>
-		<div class="nav-link-wrapper">
-			<a class="nav-link" href="#What_is_Static_Analysis">What is Static Analysis</a>
-			<a class="nav-link" href="#What_is_Formatting">What is Formatting</a>
-			<a class="nav-link" href="#What_is_a_Linter">What is a Linter</a>
-			<a class="nav-link" href="#Running_ESLint">Running ESLint</a>
-			<a class="nav-link" href="#Configuring_ESLint">Configuring ESLint</a>
-			<a class="nav-link" href="#Bonus_Round">Bonus Round</a>
-			<a class="nav-link" href="#Bonus-er_Round">Bonus-er Round</a>
-		</div>
-	</nav>
+	<div class="nav-wrapper">
+		<nav id="navbar">
+			<header>Static Analysis Tools for React Apps</header>
+			<div class="nav-link-wrapper">
+				<a class="nav-link" href="#What_is_Static_Analysis">What is Static Analysis</a>
+				<a class="nav-link" href="#What_is_Formatting">What is Formatting</a>
+				<a class="nav-link" href="#What_is_a_Linter">What is a Linter</a>
+				<a class="nav-link" href="#Running_ESLint">Running ESLint</a>
+				<a class="nav-link" href="#Configuring_ESLint">Configuring ESLint</a>
+				<a class="nav-link" href="#Bonus_Round">Bonus Round</a>
+				<a class="nav-link" href="#Bonus-er_Round">Bonus-er Round</a>
+			</div>
+		</nav>
+	</div>
 
 	<!-- You should have a main element with an id of main-doc. -->
 	<main id="main-doc">
