--- a/4-product-landing-page/index.html
+++ b/4-product-landing-page/index.html
@@ -11,13 +11,12 @@
 	<!-- your product landing page should have a header element with a corresponding id="header" -->
 	<header id="header">
 		<!-- you can see an image within the header element with a corresponding id="header-img" (a logo would make a good image here) -->
-		<img src="./logo.png" alt="Plumbus logo" id="header-img">
+		<img src="./plumbus_render.png" alt="Plumbus logo" id="header-img">
 		<div class="header-title">Bespoke Plumbuses</div>
 		<!-- within the #header element, you can see a nav element with a corresponding id="nav-bar" -->
 		<nav id="nav-bar">
 			<!-- you can see at least three clickable elements inside the nav element, each with the class nav-link -->
 			<!-- when you click a .nav-link button in the nav element, you are taken to the corresponding section of the landing page -->
-			<!-- the navbar should always be at the top of the viewport -->
 			<a href="#features" class="nav-link">Features</a>
 		</nav>
 
@@ -26,17 +25,39 @@
 	<main>
 		<div class="hero">
 			<!-- plumbus image -->
+			<img src="./plumbus_render.png" alt="render of the front and back of a plumbus">
 			<!-- everyone has a plumbus in their home -->
+			<p class="hero-text">Everyone needs a plumbus in their home</p>
+		</div>
+
+		<div class="product-info">
+			<!-- create 3 product talking points -->
+			<!-- get an icon for each point -->
+			<div class="info-point">
+				<!-- img.point-icon -->
+				<div class="point-desc">
+					<h3 class="point-title" id="features">Features</h3>
+					<p class="point-text">some text about the features idk</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="product-video">
+			<!-- you can watch an embedded product video with id="video" -->
+			<!-- https://www.youtube.com/watch?v=eMJk4y9NGvE -->
+
+		</div>
+
+		<div class="cta">
+			<!-- your landing page has a form element with a corresponding id="form" -->
+			<!-- within the form, there is an input field with id="email" where you can enter an email address -->
+			<!-- the #email input field should have placeholder text to let users know what the field is for -->
+			<!-- the #email input field uses html5 validation to confirm that the entered text is an email address -->
+			<!-- within the form, there is a submit input with a corresponding id="submit" -->
+			<!-- when you click the #submit element, the email is submitted to a static page (use this mock url: https://www.freecodecamp.com/email-submit) -->
+
 		</div>
 	</main>
-	<!-- your landing page has a form element with a corresponding id="form" -->
-	<!-- within the form, there is an input field with id="email" where you can enter an email address -->
-	<!-- the #email input field should have placeholder text to let users know what the field is for -->
-	<!-- the #email input field uses html5 validation to confirm that the entered text is an email address -->
-	<!-- within the form, there is a submit input with a corresponding id="submit" -->
-	<!-- when you click the #submit element, the email is submitted to a static page (use this mock url: https://www.freecodecamp.com/email-submit) -->
-	<!-- you can watch an embedded product video with id="video" -->
-	<!-- https://www.youtube.com/watch?v=eMJk4y9NGvE -->
 
 	<footer>
 		<p>plumbus icon by Michael Rachim from <a href="https://thenounproject.com/browse/icons/term/plumbus/"
