--- a/4-product-landing-page/index.html
+++ b/4-product-landing-page/index.html
@@ -4,15 +4,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Plumbus - Product Information</title>
+	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/latest/normalize.css">
 	<link rel="stylesheet" href="styles.css">
+	<link rel="icon" href="https://fav.farm/%F0%9F%A6%A9" />
 </head>
 
 <body>
 	<!-- your product landing page should have a header element with a corresponding id="header" -->
 	<header id="header">
 		<!-- you can see an image within the header element with a corresponding id="header-img" (a logo would make a good image here) -->
-		<img src="./plumbus_render.png" alt="Plumbus logo" id="header-img">
-		<div class="header-title">Bespoke Plumbuses</div>
+		<div class="logo-wrapper">
+			<img src="./noun-plumbus-transparent.png" alt="Plumbus logo" id="header-img" height="35" width="35">
+			<div class="header-title">Fresh Plumbuses</div>
+		</div>
 		<!-- within the #header element, you can see a nav element with a corresponding id="nav-bar" -->
 		<nav id="nav-bar">
 			<!-- you can see at least three clickable elements inside the nav element, each with the class nav-link -->
@@ -25,7 +29,7 @@
 	<main>
 		<div class="hero">
 			<!-- plumbus image -->
-			<img src="./plumbus_render.png" alt="render of the front and back of a plumbus">
+			<img src="./plumbus_render.png" alt="render of the front and back of a plumbus" class="hero-img">
 			<!-- everyone has a plumbus in their home -->
 			<p class="hero-text">Everyone needs a plumbus in their home</p>
 		</div>
@@ -35,10 +39,37 @@
 			<!-- get an icon for each point -->
 			<div class="info-point">
 				<!-- img.point-icon -->
-				<div class="point-desc">
-					<h3 class="point-title" id="features">Features</h3>
-					<p class="point-text">some text about the features idk</p>
-				</div>
+				<!-- https://www.svgrepo.com/svg/324049/recycle-3?edit=true -->
+				<svg width="64px" height="64px" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" fill="#000000">
+					<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+					<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+					<g id="SVGRepo_iconCarrier">
+						<g fill="none" fill-rule="evenodd">
+							<g transform="matrix(-1 0 0 1 48.523 13)">
+								<path fill="#80D25B"
+									d="M15.435675,31 C20.301337,31 25,26.2163013 25,21.3131203 C25,16.4099394 17.1226939,3 17.1226939,3 C17.1226939,3 7.62882483,15.3918301 7.05405343,20.6592359 C6.47928203,25.9266417 10.570013,31 15.435675,31 Z"
+									transform="rotate(36 16 17)"></path>
+								<path stroke="#22BA8E" stroke-linecap="round" stroke-width="2"
+									d="M22,10 C22,10 12.8859478,15.6488685 9.57160406,26.0527799 C8.71883296,28.7296763 7.43565096,30.6395938 6,32">
+								</path>
+								<polyline stroke="#22BA8E" stroke-linecap="round" stroke-width="2" points="17 24 10.935 23.715 8 18">
+								</polyline>
+								<polyline stroke="#22BA8E" stroke-linecap="round" stroke-width="2" points="19 18 14.459 17.197 13 14">
+								</polyline>
+							</g>
+							<path stroke="#80D25B" stroke-linecap="round" stroke-width="4"
+								d="M43.141786,9.23575965 C40.1942055,8.01613058 36.9621354,7.34298689 33.5725063,7.34298689 C27.3827305,7.34298689 21.718353,9.58766078 17.3522935,13.3057467 C15.9918638,14.4642729 14.7574874,15.7658521 13.6725467,17.1871518 M8.57250628,32.2893733 C8.57250628,39.1781277 11.3707266,45.4147242 15.8948368,49.9291322 C18.197621,52.226978 20.9475552,54.0786328 24.0032265,55.3429869 M43.141786,55.3429869 C46.1974574,54.0786328 48.9473916,52.226978 51.2501758,49.9291322 C55.774286,45.4147242 58.5725063,39.1781277 58.5725063,32.2893733 C58.5725063,28.9070134 57.8979159,25.6818746 56.6756657,22.7406153">
+							</path>
+							<polygon fill="#22BA8E" points="49.467 5.376 56.467 19.376 42.467 19.376"
+								transform="rotate(118 49.467 12.376)"></polygon>
+							<polygon fill="#22BA8E" points="40.573 48.343 47.573 62.343 33.573 62.343"
+								transform="rotate(-105 40.573 55.343)"></polygon>
+							<polygon fill="#22BA8E" points="8.573 21.343 15.573 35.343 1.573 35.343"></polygon>
+						</g>
+					</g>
+				</svg>
+				<h3 class="point-title" id="features">Features</h3>
+				<p class="point-text">some text about the features idk</p>
 			</div>
 		</div>
 
@@ -56,6 +87,11 @@
 			<!-- within the form, there is a submit input with a corresponding id="submit" -->
 			<!-- when you click the #submit element, the email is submitted to a static page (use this mock url: https://www.freecodecamp.com/email-submit) -->
 
+			<h3 class="cta-title">Request a quote</h3>
+			<p class="cta-desc">Plumbuses start at six-and-a-half Breeples</p>
+			<!-- how do I make a footnote to explain price is from rick&morty fan wiki -->
+			<!-- https://rickandmorty.fandom.com/wiki/Plumbus -->
+
 		</div>
 	</main>
 
@@ -64,7 +100,11 @@
 				target="_blank" title="plumbus Icons">Noun Project</a> (CC BY 3.0)</p>
 		<p>plumbus render by /u/FoleyX90 on <a
 				href="https://old.reddit.com/r/blender/comments/hrdg7j/i_made_a_plumbus_for_this_months_contest/"
-				target="_blank">Reddit</a></p>
+				target="_blank">Reddit</a>
+		</p>
+		<p>
+			Vectors and icons by <a href="https://www.svgrepo.com" target="_blank">SVG Repo</a> under Public Domain
+		</p>
 	</footer>
 </body>
 
