styling info points

--- a/4-product-landing-page/index.html
+++ b/4-product-landing-page/index.html
@@ -40,7 +40,8 @@
 			<div class="info-point">
 				<!-- img.point-icon -->
 				<!-- https://www.svgrepo.com/svg/324049/recycle-3?edit=true -->
-				<svg width="64px" height="64px" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" fill="#000000">
+				<svg class="point-icon" width="64px" height="64px" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"
+					fill="#000000">
 					<g id="SVGRepo_bgCarrier" stroke-width="0"></g>
 					<g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
 					<g id="SVGRepo_iconCarrier">
